# gen-gnulib

./: ChangeLog  Makefile.am  NEWS  README  configure.ac
.github/workflows/: build-test.yml
source/man/man1/: Makefile.am  gen-gnulib.sh.1.man.in
source/progs/bash/: Makefile.am
src/bash-comp/: Makefile.am  Makemodule.am  gen-gnulib.sh.in
src/man/1/: Makefile.am  gen-gnulib.sh.1.man.in
src/prg/bash/: Makefile.am  gen-gnulib.sh.in
